# x12-utils

./: .gitignore  README.md  makefile  pyproject.toml
tests/: edi_samples.py  test_x12_generator.py  test_x12_validator.py  test_x12_xgenerate_validate.py
x12_utils/: x12_generator.py  x12_validator.py
