[tool.poetry]
name = "x12-utils"
version = "0.3.0"
description = "Lightweight utilities for working with x12 EDI"
authors = ["willingham <thomas@tshows.us>"]
repository = "https://github.com/willingham/x12-utils"
homepage = "https://github.com/willingham/x12-utils"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyx12 = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.701.0"
pytest-cov = "^2.6"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
