[project]
name = "x12-utils"
version = "0.3.0"
description = "Lightweight utilities for working with x12 EDI"
authors = [{name = "willingham", email = "thomas@tshows.us"}]
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyx12>=2.3.3,<3.0.0",
    "setuptools>=80.10.2,<81.0.0",
]

[project.urls]
Homepage = "https://github.com/willingham/x12-utils"
Repository = "https://github.com/willingham/x12-utils"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.19.1"
pytest-cov = "^7.0.0"
black = "^26.3.1"

[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
